--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,6 +25,7 @@
   <meta name="msapplication-TileColor" content="#fafafa">
   <meta name="msapplication-TileImage" content="icons/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#d9d9d9">
+  <meta name="google" value="notranslate">
   <title>Barlland</title>
 </head>
 
